# SlientLakeAgent

./: .gitignore  .npmignore  .oxlintrc.json  LICENSE  README.md  SILENTLAKE.md  VISION.md  docs.acp.md  package.json  pnpm-lock.yaml  tsconfig.plugin-sdk.dts.json  vitest.gateway.forks.config.ts  vitest.gateway.session-utils.config.ts  版本控制.md
AI Agent/: AGENTS.md  CLAUDE.md  README.md
platform/: README.md  create-agent.sh  main.py  pyproject.toml  requirements.txt
platform/api/: __init__.py  dashboard.py  reports.py  tasks.py
platform/auth/: __init__.py  agent_auth.py
platform/core/: __init__.py  agent_lifecycle.py  agent_runner.py  deployer.py  port_manager.py  scaffolder.py  skill_interface.py  skill_loader.py  topology_manager.py
platform/frontend/: index.html
platform/frontend/static/: chat.js  topology.js
platform/knowledge/: __init__.py  kb_manager.py
platform/models/: __init__.py  agent_card.py  knowledge_base.py  message.py  report.py  skill.py  topology.py
platform/queue/: __init__.py  api_scheduler.py  message_queue.py
platform/scripts/: agent-status.sh
platform/server/: __init__.py  chat_server.py
platform/services/: __init__.py  a2a_router.py  channel.py  cron.py  gateway.py  heartbeat.py  mcp_manager.py  report_engine.py  task_chain_store.py
platform/skills/: __init__.py
platform/skills/cli_agents/: __init__.py  base.py  claude_code.py  codex.py  gemini.py  opencode.py
platform/skills/core/: __init__.py  shell_execute.py  web_search.py
platform/tests/: test_dashboard_api.py  test_mcp_manager.py  test_task_chain_store.py
(+290 files in other folders)
